--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nice Gelato</title>
+    <title>Website Informasi Move</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -12,301 +13,104 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<!-- header section starts  -->
-<header>
-    <input type="checkbox" name="" id="toggler">
-    <label for="toggler" class="fas fa-bars"></label>
-    <a href="#" class="logo">Nice.<span>Gelato</span></a>
-    <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#products">products</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
-    </nav>
-    <div class="icons">
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="#" class="fas fa-user"></a>
-    </div>
-</header>
-<!-- header section ends -->
-
-
-
-<!-- home section starts  -->
-<section class="home" id="home">
-    <div class="content">
-        <h3>fresh gelato</h3>
-        <span> healthy & nutritious Gelato</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum ut minus corrupti dolorum dolore assumenda iste voluptate dolorem pariatur.</p>
-        <a href="#" class="btn">shop now</a>
-    </div>
-</section>
-<!-- home section ends -->
-
-
-
-<!-- about section starts  -->
-<section class="about" id="about">
-    <h1 class="heading"> <span> about </span> us </h1>
-    <div class="row">
-        <div class="video-container">
-            <video src="images/about-vid.mp4" loop autoplay muted></video>
-            <h3>best gelato sellers</h3>
-        </div>
-        <div class="content">
-            <h3>why choose us?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cumque sit nemo pariatur corporis perspiciatis aspernatur a ullam repudiandae autem asperiores quibusdam omnis commodi alias repellat illum, unde optio temporibus.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium ea est commodi incidunt magni quia molestias perspiciatis, unde repudiandae quidem.</p>
-            <a href="#" class="btn">learn more</a>
-        </div>
-    </div>
-</section>
-<!-- about section ends -->
-
-
-
-<!-- icons section starts  -->
-<section class="icons-container">
-    <div class="icons">
-        <img src="images/icon-1.png" alt="">
-        <div class="info">
-            <h3>free delivery</h3>
-            <span>on all orders</span>
-        </div>
-    </div>
-    <div class="icons">
-        <img src="images/icon-2.png" alt="">
-        <div class="info">
-            <h3>gelato not fresh</h3>
-            <span>moneyback guarantee</span>
-        </div>
-    </div>
-    <div class="icons">
-        <img src="images/icon-3.png" alt="">
-        <div class="info">
-            <h3>offer & gifts</h3>
-            <span>on all orders</span>
-        </div>
-    </div>
-    <div class="icons">
-        <img src="images/icon-4.png" alt="">
-        <div class="info">
-            <h3>secure paymens</h3>
-            <span>protected by paypal</span>
-        </div>
-    </div>
-</section>
-<!-- icons section ends -->
-
-
-
-<!-- prodcuts section starts  -->
-<section class="products" id="products">
-    <h1 class="heading"> latest <span>products</span> </h1>
-    <div class="box-container">
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share"></a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>Gelato Coklat</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share"></a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>Gelato Coklat</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share"></a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>Gelato Coklat</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share"></a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>Gelato Coklat</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="images/img-1.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share"></a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>Gelato Coklat</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- prodcuts section ends -->
-
-
-
-<!-- review section starts  -->
-<section class="review" id="review">
-<h1 class="heading"> customer's <span>review</span> </h1>
-<div class="box-container">
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti asperiores laboriosam praesentium enim maiores? Ad repellat voluptates alias facere repudiandae dolor accusamus enim ut odit, aliquam nesciunt eaque nulla dignissimos.</p>
-        <div class="user">
-            <img src="images/pic-1.png" alt="">
-            <div class="user-info">
-                <h3>john deo</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right"></span>
-    </div>
-
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti asperiores laboriosam praesentium enim maiores? Ad repellat voluptates alias facere repudiandae dolor accusamus enim ut odit, aliquam nesciunt eaque nulla dignissimos.</p>
-        <div class="user">
-            <img src="images/pic-2.png" alt="">
-            <div class="user-info">
-                <h3>john deo</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right"></span>
-    </div>
-
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti asperiores laboriosam praesentium enim maiores? Ad repellat voluptates alias facere repudiandae dolor accusamus enim ut odit, aliquam nesciunt eaque nulla dignissimos.</p>
-        <div class="user">
-            <img src="images/pic-3.png" alt="">
-            <div class="user-info">
-                <h3>john deo</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right"></span>
-    </div>
-</div>
-</section>
-<!-- review section ends -->
-
-
-
-<!-- contact section starts  -->
-<section class="contact" id="contact">
-    <h1 class="heading"> <span> contact </span> us </h1>
-    <div class="row">
-        <form action="">
-            <input type="text" placeholder="name" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="number" class="box">
-            <textarea name="" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
-        </form>
-        <div class="image">
-            <img src="images/contact-img.png" alt="">
-        </div>
-    </div>
-</section>
-<!-- contact section ends -->
-
-
-
-<!-- footer section starts  -->
-<section class="footer">
-    <div class="box-container">
-        <div class="box">
-            <h3>quick links</h3>
-            <a href="#home">home</a>
-            <a href="#about">about</a>
-            <a href="#products">products</a>
-            <a href="#review">review</a>
+    <!-- header section starts  -->
+    <header id="home">
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+        <a href="#" class="logo">Nice <span>Movie</span></a>
+        <nav class="navbar">
+            <a href="#products">home</a>
             <a href="#contact">contact</a>
+        </nav>
+        <div class="icons">
+            <a class="fas fa-heart"></a>
+            <a href="https://sakabayul.github.io/" class="fas fa-user" target="_blank"></a>
         </div>
-        <div class="box">
-            <h3>extra links</h3>
-            <a href="#">my account</a>
-            <a href="#">my order</a>
-            <a href="#">my favorite</a>
-        </div>
-        <div class="box">
-            <h3>locations indonesia</h3>
-            <a href="#">DKI Jakarta</a>
-        </div>
-        <div class="box">
-            <h3>contact info</h3>
-            <a href="#">+62 example</a>
-            <a href="#">example@gmail.com</a>
-            <a href="#">example rekening - 400104</a>
-            <img src="images/payment.png" alt="">
-        </div>
-    </div>
-    <div class="credit"> created by <span> WebDeveloper-EFM </span> | all rights reserved. </div>
-</section>
-<!-- footer section ends -->
+    </header>
+    <!-- header section ends -->
 
+
+
+    <!-- prodcuts section starts  -->
+    <section class="products" id="products">
+        <h1 class="search">Search Movie</h1>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search title..">
+            <button id="search-button">Cari</button>
+        </div>
+        <h1 class="heading">Movie<span> List</span> </h1>
+        <div class="box-container" id="movie-list">
+
+        </div>
+        <div class="pagination display-none">
+            <a class="prev">&laquo; Prev</a>
+            <div class="pages"></div>
+            <a class="next">Next &raquo;</a>
+        </div>
+        <div class="jarak">
+            <h1>try search movie</h1>
+            <p>(Jika ada Error coba kirim pesan ke contact dibawah ini).</p>
+            <br>
+            <p>(Informasi film ini diambil dari OMDb Rest API</p>
+            <p>dan hanya dipergunakan untuk konten edukasi saja!)</p>
+        </div>
+    </section>
+    <!-- prodcuts section ends -->
+
+
+
+    <!-- contact section starts  -->
+    <section class="contact" id="contact">
+        <h1 class="heading"> <span> contact </span> us </h1>
+        <div class="row">
+            <form action="" name="my-contact-portfolio">
+                <input type="text" name="website" value="Website Informasi Film" class="box display-none" readonly>
+                <input type="text" name="nama" placeholder="name" class="box" required>
+                <input type="email" name="email" placeholder="email" class="box" required>
+                <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10" required></textarea>
+                <input type="submit" value="send message" class="btn">
+            </form>
+            <div class="image">
+                <img src="images/contact-img.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- contact section ends -->
+
+
+
+    <!-- footer section starts  -->
+    <section class="footer">
+        <div class="credit">Copyright © 2023. Design By | <a href="https://sakabayul.github.io/" target="_blank">
+                Saka Bayu</a>
+        </div>
+    </section>
+    <!-- footer section ends -->
+
+    <!-- JS Action -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
+    <!-- Script tombol kirim form untuk my contact -->
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwoKpeRYLbIVkUS8c5RXFjXoyCZxM5sLc9BrLm1L4rteTEsKhJWGzXTJSHNtqhyOWlQ1A/exec'
+        const form = document.forms['my-contact-portfolio'];
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    //reset form
+                    form.reset();
+                    console.log('Success!', response)
+                })
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 </body>
+
 </html>
