--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 </head>
 
 <body>
-
-    <!-- header section starts  -->
-    <header id="home">
+    <!-- header section start  -->
+    <header>
         <input type="checkbox" name="" id="toggler">
         <label for="toggler" class="fas fa-bars"></label>
         <a href="#" class="logo">Nice <span>Movie</span></a>
         <nav class="navbar">
-            <a href="#products">home</a>
+            <a href="#home">home</a>
             <a href="#contact">contact</a>
         </nav>
         <div class="icons">
@@ -34,9 +33,9 @@
 
 
 
-    <!-- prodcuts section starts  -->
-    <section class="products" id="products">
-        <h1 class="search">Search Movie</h1>
+    <!-- movie section start  -->
+    <section class="movie" id="movie">
+        <h1 class="search" id="home">Search Movie</h1>
         <div class="search-container">
             <input type="text" id="search-input" placeholder="Search title..">
             <button id="search-button">Cari</button>
@@ -57,11 +56,11 @@
             <p>(Informasi film ini diambil dari Rest API OMDb dan hanya dipergunakan untuk latihan saya saja!)</p>
         </div>
     </section>
-    <!-- prodcuts section ends -->
+    <!-- movie section ends -->
 
 
 
-    <!-- contact section starts  -->
+    <!-- contact section start  -->
     <section class="contact" id="contact">
         <h1 class="heading"> <span> contact </span> us </h1>
         <div class="row">
@@ -81,13 +80,15 @@
 
 
 
-    <!-- footer section starts  -->
+    <!-- footer section start  -->
     <section class="footer">
         <div class="credit">Copyright © 2023. Design By | <a href="https://sakabayul.github.io/" target="_blank">
                 Saka Bayu</a>
         </div>
     </section>
-    <!-- footer section ends -->
+    <!-- footer section end -->
+
+
 
     <!-- JS Action -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
